# ghc-notes

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
fake_projects/good/: baz.py
fake_projects/good/foo/: bar.py
fake_projects/has_errors/: baz.py
fake_projects/has_errors/foo/: bar.py
ghc_notes/: files.py  find.py  model.py  rules.py
ghc_notes/cli/: check.py  main.py
test_project/: module.py
tests/: find_test.py  rules_test.py
tests/cli/: check_test.py
